<package>
	<name>sound_publisher</name>
	<version>0.1.0</version>
	<description>Package to test rosnode</description>
	<maintainer email="turtlebot.mec3@gmail.com">Mec3 </maintainer>
	<license>BSD</license>
	<url type="website">https://github.com/turtlebotmec3/</url>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>python-serial</build_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
        <run_depend>python-serial</run_depend>
</package>
